Revision history for Perl extension Foo.

{{$NEXT}}

0.10      2012-05-08 09:43:54 Europe/Berlin

  - MySQL storage: more documentation and minor
                   method renaming.

0.09      2012-05-08 09:15:17 Europe/Berlin

  - MySQL storage: reconnect logic (with exp. backoff)

0.08      2012-04-26 16:52:51 Europe/Berlin

  - Ooops, lose the Redis cfg that will make tests fail.

0.07      2012-04-26 16:07:08 Europe/Berlin

  - POD fixes.
  - Optional jitter added to Redis expiration time.

0.05      2012-04-26 08:03:10 Europe/Berlin

  - Allow any number of value columns in MySQL storage backend.

0.04      2012-04-25 10:22:37 Europe/Berlin

  - delete() now handles migrations correctly.
  - Prototype StaticMapping sharding strategy

0.03      2012-04-22 20:20:17 Europe/Berlin

  - Tests for the Redis string storage.
  - Tests for the Redis hash storage.
  - Fixed return value for ::Storage::Redis::Hash->get

0.02      2012-04-22 11:33:31 Europe/Berlin

  - Fix missing dependencies
  - Start using Pod::Weaver

0.01  Sat Apr 21 12:00:00 2012
  - original version
