@@ -1,5 +1,5 @@
 name    = ShardedKV
-version = 0.10
+version = 0.11
 author  = Steffen Mueller <smueller@cpan.org>
 author  = Nick Perez <nperez@cpan.org>
 license = Perl_5
